--- a/index.ipynb
+++ b/index.ipynb
@@ -21,7 +21,10 @@
    "source": [
     "## Objectives\n",
     "You will be able to:\n",
-    "* Create and use your own custom functions"
+    "* Create and use your own custom functions\n",
+    "* Use a function to produce an output based upon an input\n",
+    "* Properly write the body of python functions\n",
+    "* Show how functions can reduce the amount of code we write"
    ]
   },
   {
@@ -377,8 +380,18 @@
     "collapsed": true
    },
    "source": [
-    "In this section we saw how using a function allows us to reuse code without rewriting it.  We saw that to declare a function we first write the function signature, which consists of the `def` keyword, the function name, parentheses and a colon.  We indicate the body of the function by indenting our code and then writing the code that our function will execute.  To execute the function, we write the function's name followed by parentheses.  Executing the function will run the lines in the body of the function."
+    "* We saw how using a function allows us to reuse code without rewriting it. \n",
+    "* We saw that to declare a function we first write the function signature, which consists of the `def` keyword, the function name, parentheses and a colon.  \n",
+    "* We indicate the body of the function by indenting our code and then writing the code that our function will execute.  * To execute the function, we write the function's name followed by parentheses.  \n",
+    "* Executing the function will run the lines in the body of the function."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -397,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
